2018-05-20 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp.c (mpz_get_d): Convert a fixed number of
	bits (GMP_DBL_MANT_BITS) to avoid rounding.

	* mini-mpq.c (mpq_mul): Use mpq_nan_init.

	* tests/t-double.c (test_matissa): Tests converted bits.

2018-04-26 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-mpq.c: New file, mini-implementation of mpq_t.
	* mini-mpq.h: New file, definitions for mpq_t.
	* tests/t-mpq_addsub: New tests for mpq_add and sub.
	* tests/t-mpq_muldiv: New tests for mpq_mul and div.
	* tests/t-mpq_muldiv_2exp: New tests for mpq_*_2exp.

2018-03-11  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp.c (mpn_div_qr_2_preinv): Drop separate rp argument.
	Clobber input np, and store remainder in np[0] and np[1]. This is
	all the current caller needs, and it eliminates one allocation in
	the common case of un-normalized d.
	(mpn_div_qr_2): Delete #if:ed out function.
	(mpn_div_qr_preinv): Update the only call site for
	mpn_div_qr_2_preinv.

2018-02-10  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp.c (mpn_div_qr_1_preinv): When qp is non-NULL, reuse
	area for shifted input, to avoid an allocation.

2018-01-15 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp.c (gmp_popcount_limb): Micro-optimisations.
	* tests/t-comb.c (checkWilson): Check also mpz_2fac_ui.

2017-12-30 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp.c (mpz_mfac_ui, mpz_2fac_ui): New functions.
	* mini-gmp.h: Declare them.
	* mini-gmp.c (mpz_fac_ui): Use mpz_mfac_ui.

2017-07-23  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp.c (GMP_MPN_OVERLAP_P): New macro, copy of
	MPN_OVERLAP_P, from gmp-impl.h.
	(mpn_mul): Assert that output area doesn't overlap with the input.

2017-02-03 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp.c (mpz_sizeinbase, mpz_get_str, mpz_set_str): Support
	bases up to 62.
	* tests/t-str.c: Update tests accordingly.

2016-11-27 Marco Bodrato <bodrato@mail.dm.unipi.it>
